Complete overhauled Navigation to overcome issues with responsiveness and flex overlaps

--- a/react-client/src/static/css/allstyles.css
+++ b/react-client/src/static/css/allstyles.css
@@ -38,115 +38,6 @@ code {
   }
 }
 
-.navbar {
-  background-color: rgb(15 23 42);
-}
-
-.navbar-item {
-  position: relative;
-  display: inline-block;
-  padding: 8px 10px;
-  border: 3px solid rgb(15 23 42);
-  ;
-  cursor: pointer;
-  text-wrap: nowrap;
-}
-
-.navbar-item-active {
-  background-color: #ffffff;
-  border: 3px solid rgb(15 23 42);
-  color: black;
-}
-
-.navbar-item:hover {
-  color: white;
-  background: rgb(75 85 99);
-}
-
-.navbar-item:hover .dropdown-menu {
-  color: white;
-  display: block;
-}
-
-.navbar-link {
-  text-decoration: none;
-  padding: 10px 20px;
-  z-index: 5;
-}
-
-.navbar-link:hover {
-  color: white;
-}
-
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  margin-top: 2px;
-  background-color: white;
-  border: 1px solid #000000;
-  box-shadow: 0 8px 16px rgba(97, 96, 96, 0.743);
-  z-index: 50;
-  min-width: 150px;
-  color: black;
-  display: none;
-}
-
-.dropdown-item {
-  display: block;
-  padding: 8px 12px;
-  text-decoration: none;
-  border: 5px black;
-  color: black;
-  margin-bottom: 3px;
-}
-
-.dropdown-item:hover {
-  color: white;
-  text-decoration: none;
-  background-color: rgb(75 85 99);
-}
-
-.dropdown-item-active {
-  border: 1px solid #333333;
-  background-color: rgb(219, 219, 219);
-  color: black;
-}
-
-.navmenu-item {
-  padding: 8px 12px;
-  border-radius: 0.375rem;
-  color: black;
-  background-color: rgb(157, 157, 157);
-  cursor: pointer;
-}
-
-.navmenu-item-active {
-  border: 2px solid #333333;
-  background-color: rgb(219, 219, 219);
-  color: black;
-}
-
-.navmenu-subitem {
-  padding: 8px 12px;
-  border-radius: 0.375rem;
-  color: black;
-  background-color: rgb(219, 219, 219);
-
-}
-
-.navmenu-subitem-active {
-  border: 2px solid #333333;
-  background-color: rgb(255, 255, 255);
-  color: black;
-}
-
-.navmenu-item:hover,
-.navmenu-subitem:hover {
-  background-color: rgb(75 85 99);
-  color: white;
-}
-
 .user-area {
   position: absolute;
   top: 85%;
@@ -163,6 +54,7 @@ code {
   flex-direction: column;
   justify-items: right;
   gap: 4px;
+  right: 0;
 }
 
 .user-area-info {
